# LabI

uuv_simulator/rov/scripts/: thrusters.py
uuv_simulator/rov/urdf/: ROV.urdf
uuv_simulator/uuv_gazebo/: CMakeLists.txt
